[gd_scene load_steps=15 format=3 uid="uid://bqtgh4qb0t552"]

[ext_resource type="Script" path="res://ScenarioScript/MenuSS/MenuInterface.gd" id="1_was4h"]
[ext_resource type="Texture2D" uid="uid://cb0cmffo2lvki" path="res://Assets/Scenarios/Menu/MenuBackground.png" id="2_0y6vs"]
[ext_resource type="FontFile" uid="uid://dip2wk5qdyt6j" path="res://Assets/Font/Normal.TTF" id="3_4lom2"]
[ext_resource type="AudioStream" uid="uid://c5euakdvxgsrm" path="res://Assets/Music/Buttons/ButtonPress.mp3" id="4_r6mxk"]
[ext_resource type="AudioStream" uid="uid://c2xbq5r4ntv0c" path="res://Assets/Music/Buttons/StartGame.mp3" id="5_rnql6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jbgut"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2qban"]
bg_color = Color(0.294118, 0, 0, 0.784314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m8vd7"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0n6ek"]
bg_color = Color(0.294118, 0, 0, 0.784314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r325m"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uo8cn"]
bg_color = Color(0.294118, 0, 0, 0.784314)

[sub_resource type="Animation" id="Animation_ep3f1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_b6kf8"]
resource_name = "fade_out"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hdv84"]
_data = {
"RESET": SubResource("Animation_ep3f1"),
"fade_out": SubResource("Animation_b6kf8")
}

[node name="MenuInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_was4h")

[node name="MenuBackground" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 1168.0
offset_bottom = 660.0
texture = ExtResource("2_0y6vs")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -378.0
offset_right = 380.0
offset_bottom = -70.0
grow_vertical = 0
theme_override_constants/separation = 30
alignment = 1

[node name="GameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.454902, 0.454902, 0.454902, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_4lom2")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_jbgut")
theme_override_styles/hover = SubResource("StyleBoxFlat_2qban")
text = "New Game"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.454902, 0.454902, 0.454902, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_4lom2")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_m8vd7")
theme_override_styles/hover = SubResource("StyleBoxFlat_0n6ek")
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.454902, 0.454902, 0.454902, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_4lom2")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_r325m")
theme_override_styles/hover = SubResource("StyleBoxFlat_uo8cn")
text = "Quit"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 34.0
offset_top = 20.0
offset_right = 557.0
offset_bottom = 100.0

[node name="GameTitle" type="Label" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_4lom2")
theme_override_font_sizes/font_size = 70
text = "THE VESSEL BELOW"

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_r6mxk")
volume_db = -20.0

[node name="PlaySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_rnql6")
volume_db = -10.0

[node name="Fade" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 1152.0
offset_bottom = 650.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AnimationFade" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hdv84")
}

[connection signal="pressed" from="VBoxContainer/GameButton" to="." method="_on_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="animation_finished" from="AnimationFade" to="." method="_on_animation_fade_animation_finished"]
